@@ -129,55 +129,4 @@ kdelibs3: shlib-missing-in-control-file kio_https.so usr/lib/kde2/kio_https.so
 kdelibs3: extra-license-file usr/share/apps/ksgmltools2/customization/no-NY/entities/underArtisticLicense.docbook
 kdelibs3: extra-license-file usr/share/apps/ksgmltools2/customization/no-NY/entities/underBSDLicense.docbook
 kdelibs3: extra-license-file usr/share/apps/ksgmltools2/customization/no-NY/entities/underX11License.docbook
-# these are all a result of using objprelink
-kdelibs3: shlib-with-non-pic-code usr/lib/libDCOP.so.1.0.0
-kdelibs3: shlib-with-non-pic-code usr/lib/dcopserver.so
-kdelibs3: shlib-with-non-pic-code usr/lib/libkdecore.so.3.0.0
-kdelibs3: shlib-with-non-pic-code usr/lib/libkdeui.so.3.0.0
-kdelibs3: shlib-with-non-pic-code usr/lib/libkdesu.so.1.0.0
-kdelibs3: shlib-with-non-pic-code usr/lib/libkssl.so.2.0.2
-kdelibs3: shlib-with-non-pic-code usr/lib/libkjs.so.1.0.0
-kdelibs3: shlib-with-non-pic-code usr/lib/libkio.so.3.0.0
-kdelibs3: shlib-with-non-pic-code usr/lib/libksycoca.so.3.0.0
-kdelibs3: shlib-with-non-pic-code usr/lib/kio_uiserver.so
-kdelibs3: shlib-with-non-pic-code usr/lib/klauncher.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kded.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kbuildsycoca.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kde2/kio_file.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kde2/kio_http.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kde2/kio_ftp.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kde2/libkpac.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kde2/kgzipfilter.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kde2/kbzip2filter.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kde2/kimg_eps.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kde2/kimg_tiff.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kde2/kimg_g3.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kde2/kimg_ico.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kde2/libkded_kdeprintd.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kde2/libkdeprint_lpdunix.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kde2/libkdeprint_lpd.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kde2/libkdeprint_rlpr.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kde2/libkdeprint_ext.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kde2/kio_help.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kde2/kjs_html.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kcookiejar.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kio_http_cache_cleaner.so
-kdelibs3: shlib-with-non-pic-code usr/lib/libkfile.so.3.0.0
-kdelibs3: shlib-with-non-pic-code usr/lib/libkparts.so.1.0.0
-kdelibs3: shlib-with-non-pic-code usr/lib/libkdeprint.so.0.0.1
-kdelibs3: shlib-with-non-pic-code usr/lib/libkdeprint_management.so.0.0.1
-kdelibs3: shlib-with-non-pic-code usr/lib/kconf_update.so
-kdelibs3: shlib-with-non-pic-code usr/lib/libktexteditor.so.0.0.0
-kdelibs3: shlib-with-non-pic-code usr/lib/libkab.so.3.0.0
-kdelibs3: shlib-with-non-pic-code usr/lib/libkjava.so.1.0.0
-kdelibs3: shlib-with-non-pic-code usr/lib/libkhtml.so.3.0.0
-kdelibs3: shlib-with-non-pic-code usr/lib/libkhtmlimage.so
-kdelibs3: shlib-with-non-pic-code usr/lib/libkspell.so.3.0.0
-kdelibs3: shlib-with-non-pic-code usr/lib/hcstyle.so
-kdelibs3: shlib-with-non-pic-code usr/lib/basicstyle.so
-kdelibs3: shlib-with-non-pic-code usr/lib/klegacystyle.so
-kdelibs3: shlib-with-non-pic-code usr/lib/mega.so
-kdelibs3: shlib-with-non-pic-code usr/lib/kstepstyle.so
-kdelibs3: shlib-with-non-pic-code usr/lib/webstyle.so
-kdelibs3: shlib-with-non-pic-code usr/lib/libkscreensaver.so.3.0.0
 
