@@ -1,14 +1,4 @@
 libarts: setuid-binary usr/bin/artswrapper 4755 root/root
-libarts: shlib-with-non-pic-code usr/lib/libmcop.so.0.0.0
-libarts: shlib-with-non-pic-code usr/lib/libmcop_mt.so.0.0.0
-libarts: shlib-with-non-pic-code usr/lib/libartscbackend.so.0.0.0
-libarts: shlib-with-non-pic-code usr/lib/libartsflow.so.0.0.0
-libarts: shlib-with-non-pic-code usr/lib/libartsflow_idl.so.0.0.0
-libarts: shlib-with-non-pic-code usr/lib/libartswavplayobject.so.0.0.0
-libarts: shlib-with-non-pic-code usr/lib/libkmedia2_idl.so.0.0.0
-libarts: shlib-with-non-pic-code usr/lib/libkmedia2.so.0.0.0
-libarts: shlib-with-non-pic-code usr/lib/libsoundserver_idl.so.0.0.0
-libarts: shlib-with-non-pic-code usr/lib/libx11globalcomm.so.0.0.0
 libarts: link-to-undocumented-manpage usr/share/man/man1/mcopidl.1.gz
 libarts: link-to-undocumented-manpage usr/share/man/man1/artsd.1.gz
 libarts: link-to-undocumented-manpage usr/share/man/man1/artsplay.1.gz
