@@ -1,8 +1,4 @@
 #
 libkmid-alsa: shlib-missing-in-control-file libartskde.so usr/lib/libartskde.so
 libkmid-alsa: shlib-missing-in-control-file knotify.so usr/lib/knotify.so
-libkmid-alsa: shlib-with-non-pic-code usr/lib/libartskde.so
-libkmid-alsa: shlib-with-non-pic-code usr/lib/knotify.so
-libkmid-alsa: shlib-with-non-pic-code usr/lib/libkmid.so.0.0.95
-libkmid-alsa: shlib-with-non-pic-code usr/lib/libqtmcop.so.0.0.0
 
